fix: Update repository URLs and add new database files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,6 @@ system_prompt.md
 tests/
 context_portal/
 .roomodes
+context_portal/context.db
+context_portal/conport_vector_data/chroma.sqlite3
+context_portal/conport_vector_data/5ed34b5c-1395-4ec9-9429-ee4207b89ceb/length.bin
