--- a/aicleaner/config.yaml
+++ b/aicleaner/config.yaml
@@ -2,7 +2,7 @@ name: "Roo AI Cleaning Assistant"
 version: "0.1.0"
 slug: "aicleaner"
 description: "AI-powered room cleanliness analysis and to-do list generator."
-url: "https://github.com/sporebattyl/hass-addon-aicleaner"
+url: "https://github.com/sporebattyl/Aiclean"
 arch:
   - aarch64
   - amd64
@@ -15,9 +15,11 @@ options:
   camera_entity: null
   gemini_api_key: null
   todo_list_entity: null
+  sensor_entity_id: null
   update_frequency: 24
 schema:
   camera_entity: str
   gemini_api_key: secret
   todo_list_entity: str
+  sensor_entity_id: str
   update_frequency: int(1, 168)
