--- a/aicleaner/Dockerfile
+++ b/aicleaner/Dockerfile
@@ -5,16 +5,20 @@ FROM ${BUILD_FROM}
 # Set the working directory
 WORKDIR /app
 
-# Copy the application files
-COPY aicleaner.py .
-COPY run.sh .
+# Copy requirements first for better caching
 COPY requirements.txt .
 
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy the entire application
+COPY . .
+
 # Make run.sh executable
 RUN chmod a+x run.sh
+
+# Expose the Flask port
+EXPOSE 8099
 
 # Start the application
 CMD [ "./run.sh" ]
