Revert "🎉 Merge Performance Analytics System v2.0 - Final Major Feature (#3)"
This reverts commit d6dbcde8c91cc9561e2da203478a72ea32736341, reversing
changes made to 09d92eba167932a642a52e9e8413d498c7cf0efa.

--- a/aicleaner/Dockerfile
+++ b/aicleaner/Dockerfile
@@ -5,20 +5,16 @@ FROM ${BUILD_FROM}
 # Set the working directory
 WORKDIR /app
 
-# Copy requirements first for better caching
+# Copy the application files
+COPY aicleaner.py .
+COPY run.sh .
 COPY requirements.txt .
 
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the entire application
-COPY . .
-
 # Make run.sh executable
 RUN chmod a+x run.sh
-
-# Expose the Flask port
-EXPOSE 8099
 
 # Start the application
 CMD [ "./run.sh" ]
