Add debug integration test script for troubleshooting failures
- Introduced a new script `debug_integration_test.py` to facilitate debugging of integration tests.
- The script mocks external dependencies and sets up a test environment using existing fixtures.
- It includes detailed print statements to trace the execution flow and outputs of various methods in the `Zone` class.
- Tests camera snapshot retrieval, individual analysis methods, and the full analysis cycle.
- Provides feedback on the success or failure of the integration test based on the expected number of API calls.

--- a/aicleaner/Dockerfile
+++ b/aicleaner/Dockerfile
@@ -11,9 +11,13 @@ COPY requirements.txt .
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the run script and make it executable
+# Copy the application files
+COPY aicleaner.py .
 COPY run.sh .
 RUN chmod a+x run.sh
+
+# Copy the www directory for Lovelace cards
+COPY www/ /app/www/
 
 # Start the application
 CMD [ "./run.sh" ]
