🔒 Implement secure secrets management system
✨ Security Features:
- Created .env.secrets.template for safe secret management
- Updated .env.mcp to source secrets from separate file
- Added comprehensive SECRETS_SETUP.md documentation
- Updated .gitignore to protect .env.secrets from being committed

🛡️ Security Benefits:
- Sensitive API keys never enter version control
- Automatic fallback to placeholders if secrets missing
- Clear setup instructions for team members
- Proper file permissions and access control

📋 Files Added:
- .env.secrets.template - Safe template for copying
- SECRETS_SETUP.md - Comprehensive setup documentation

⚙️ Configuration Updates:
- .env.mcp now sources .env.secrets automatically
- Clear warning messages for missing secrets
- Graceful degradation with placeholder values

🎯 Usage:
1. Copy .env.secrets.template to .env.secrets
2. Fill in actual API keys in .env.secrets
3. Source .env.mcp to load configuration
4. .env.secrets stays local and secure

This implements proper secrets management following security best practices!

--- a/.env.mcp
+++ b/.env.mcp
@@ -1,19 +1,22 @@
 # MCP Services Configuration
-# Edit this file with your actual API keys and tokens
+# This file contains non-sensitive configuration and sources secrets from .env.secrets
 
-# GitHub Personal Access Token
-# Get from: https://github.com/settings/tokens
-# Scopes needed: repo, user, gist
-export GITHUB_PERSONAL_ACCESS_TOKEN="your_github_token_here"
+# IMPORTANT: Load sensitive information from .env.secrets
+# Copy .env.secrets.template to .env.secrets and fill in your actual API keys
+if [ -f ".env.secrets" ]; then
+    source .env.secrets
+    echo "✅ Loaded secrets from .env.secrets"
+else
+    echo "⚠️  Warning: .env.secrets not found. Copy .env.secrets.template to .env.secrets and add your API keys."
+    # Fallback to placeholder values if secrets file doesn't exist
+    export GITHUB_PERSONAL_ACCESS_TOKEN="your_github_token_here"
+    export BRAVE_API_KEY="your_brave_api_key_here"
+    export NOTION_TOKEN="your_notion_token_here"
+fi
 
 # Puppeteer Configuration
 # Path to Chromium browser
 export PUPPETEER_EXECUTABLE_PATH="/usr/bin/chromium-browser"
-
-# Brave Search API Key
-# Get from: https://brave.com/search/api/
-# Free tier: 2,000 queries/month
-export BRAVE_API_KEY="your_brave_api_key_here"
 
 # Home Assistant Development MCP Servers
 # Command execution for HA CLI and addon testing
@@ -31,6 +34,6 @@ export HA_OPENAPI_URL="http://supervisor/core/api/openapi.json"
 export NODE_SANDBOX_ENABLED=true
 
 # Notion MCP for project management and documentation
-# Get your integration token from: https://www.notion.so/my-integrations
-export NOTION_TOKEN="your_notion_token_here"
+# Notion Page ID (non-sensitive, can be public)
 export NOTION_PAGE_ID="2202353b-33e4-8014-9b1f-d31d4cbb309d"
+# Note: NOTION_TOKEN is loaded from .env.secrets
